<resources>
    <string name="app_name">MilkCollection</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="user_id">User Id</string>
    <string name="cow">Cow</string>
    <string name="baffalo">Baffalo</string>
    <string name="fat">FAT</string>
    <string name="generate_bill">Generate Bill</string>
    <string name="quantity">Select Rase</string>
    <string name="signup">Sign Up</string>

    <string name="averagefat">AverageFat</string>
    <string name="total_amount">Total Amount</string>
    <string name="snf_amount">SNF Amount</string>
    <string name="fat_amount">Fat Amount</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="rase">Rase</string>

</resources>